Rewrite recipes to use vanilla/FabricAPI ingredients (#3259)
* Rewrite recipes

* Fixes

* Recipe fixes